# hrBrowser

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE.txt  README.md
browser/: browser.cpp
src/: browser.cpp  browser.h  main.cpp  ui.cpp
src/ui/: ui.cpp  ui.h
src/ui/address_bar/: address_bar.cpp  address_bar.h
ui/: ui.cpp  ui.h
ui/address_bar/: address_bar.cpp
ui/backward_button/: backward_button.cpp  backward_button.h
ui/forward_button/: forward_button.cpp  forward_button.h
ui/refresh_button/: refresh_button.cpp  refresh_button.h
ui/tab_bar/: tab_bar.cpp  tab_bar.h
ui/tab_bar/css/: tab.css
